--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="Assets/Styles/styles.css">
+    <link rel="stylesheet" href="Assets/Styles/HomeStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -34,13 +34,13 @@
                 <a class="nav-link" href="Products.html">Products</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="Contact Us.html">Contact Us</a>
+                <a class="nav-link" href="ContactUs.html">Contact Us</a>
             </li>
         </ul>
         </div>
       </nav>
 
-      <!--Creating a space between the header and the carousel so I can input and Our Services to show clients what we can offer on the Home Page-->
+      <!--Creating a space between the header and the carousel so I can input and Our Services to show clients what the company/website can offer on the Home Page-->
 
       <ul></ul>
       <div class="container-fluid">
@@ -68,16 +68,16 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="Assets/Images/Illustrator.jpg" class="container-fluid .h800" alt="...">
+                <img src="Assets/Images/HomePage/Illustrator.jpg" class="container-fluid .h800" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Assets/Images/Graphic Design.jpg" class="container-fluid .h800" alt="...">
+                <img src="Assets/Images/HomePage/Graphic Design.jpg" class="container-fluid .h800" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Assets/Images/Web Design.jpg" class="container-fluid .h800" alt="...">
+                <img src="Assets/Images/HomePage/Web Design.jpg" class="container-fluid .h800" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="Assets/Images/Game Design.webp" class="container-fluid .h800" alt="">
+                <img src="Assets/Images/HomePage/Game Design.webp" class="container-fluid .h800" alt="">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -124,7 +124,7 @@
         <div class="card-group">
 
           <div class="card">
-            <img class="card-img-top" src="Assets/Images/Client1.jpg" alt="Card image cap">
+            <img class="card-img-top" src="Assets/Images/HomePage/Client1.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Miles Avery</h5>
               <p class="card-text">Job Title of the Client, What the client wanted / What services they needed. What the Client toughts of the companys services and the team.</p>
@@ -133,7 +133,7 @@
           </div>
 
           <div class="card">
-            <img class="card-img-top" src="Assets/Images/Client2.jpg" alt="Card image cap">
+            <img class="card-img-top" src="Assets/Images/HomePage/Client2.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Ashley Jeanes</h5>
               <p class="card-text">Job Title of the Client, What the client wanted / What services they needed. What the Client toughts of the companys services and the team.</p>
@@ -142,7 +142,7 @@
           </div>
 
           <div class="card">
-            <img class="card-img-top" src="Assets/Images/Client3.jpg" alt="Card image cap">
+            <img class="card-img-top" src="Assets/Images/HomePage/Client3.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Sarrena Dyson</h5>
               <p class="card-text">Job Title of the Client, What the client wanted / What services they needed. What the Client toughts of the companys services and the team.</p>
@@ -151,7 +151,7 @@
           </div>
 
           <div class="card">
-            <img class="card-img-top" src="Assets/Images/Client4.jpg" alt="Card image cap">
+            <img class="card-img-top" src="Assets/Images/HomePage/Client4.jpg" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Marcus Georgeson</h5>
               <p class="card-text">Job Title of the Client, What the client wanted / What services they needed. What the Client toughts of the companys services and the team.</p>
