--- a/Products.html
+++ b/Products.html
@@ -59,5 +59,13 @@
 
       <!--Finished inputting the Our Products Tag using the same code of CSS as the one from the Home Page-->
 
+
+      <!--Starting on the creating the Products of this Page-->
+      <!--Using Javascript for this page to make the products more presentable-->
+
+
+      <!--Bootstrap Script Link-->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
