--- a/Products.html
+++ b/Products.html
@@ -61,8 +61,20 @@
 
 
       <!--Starting on the creating the Products of this Page-->
+      <!--First creating the types of product we are offering such as Art&Illustrations, Board Games, Phone Cases, Journals, ect-->
+
+      <div class="container-fluid">
+
+        <h5>Art & Illustrations</h5>
+
+        
+
+
+
       <!--Using Javascript for this page to make the products more presentable-->
 
+      <!--JavaScript-->
+      <script src="Assets/Styles/Products.js"></script>
 
       <!--Bootstrap Script Link-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
