Products In-Process
Manage to create a carousel that makes the art pop for the Art & Illustration, created sliding images that represent the posters, I made them different from the carousel so that the Products Webpage can pop.

I also managed to create a table to show how much the products cost using JavaScript. I will be using this same method for the Services Page.

--- a/Products.html
+++ b/Products.html
@@ -63,18 +63,307 @@
       <!--Starting on the creating the Products of this Page-->
       <!--First creating the types of product we are offering such as Art&Illustrations, Board Games, Phone Cases, Journals, ect-->
 
-      <div class="container-fluid">
+      <!--Starting with the Art & Illustrations-->
 
-        <h5>Art & Illustrations</h5>
+      <div class="container-fluid">
+        <div class="midContainer">
+          <div class="midNav">
+            <ul>
+              <li><a href=""><h4>Art & Illustrations</h4></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <ul></ul>
+
+
+
+
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+        </div>
+
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="Assets/Images/Products/Art&Illustrations/Digital Art 1.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Modern Greek Statue</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="Assets/Images/Products/Art&Illustrations/Digital Art 2.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Head Up in the Mountains</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="Assets/Images/Products/Art&Illustrations/Digital Art 3.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Blazing Star</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="Assets/Images/Products/Art&Illustrations/Digital Art 4.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Forth slide label</h5>
+              <p>Modern Metalic Greek Statue</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="Assets/Images/Products/Art&Illustrations/Digital Art 5.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Fifth slide label</h5>
+              <p>Marbel and Gold Statue.</p>
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <img src="Assets/Images/Products/Art&Illustrations/Digital Art 6.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Sixth slide label</h5>
+              <p>Star Forest</p>
+            </div>
+          </div>
+
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+      <!--Finished doing the Art & Illustrations Carousel-->
+
+      <!--Creatingsome space between subjects-->
+      <ul></ul>
+
+      <!--I am going to start to do the Posters but instaed of doing them in a carousel I am going to do atomatically move by itself from one side to another-->
+
+      <div class="row">
+        <div style="text-align: center;"><h2>Posters</h2></div>
+    <marquee behavior="scroll" direction="left" scrollamount="5">
+
+    <img src="Assets/Images/Products/Art&Illustrations/Digital Art 1.jpg" width="400" height="350" alt="">
+
+    <img src="Assets/Images/Products/Art&Illustrations/Digital Art 2.jpg" width="300" height="400" alt="">
+
+    <img src="Assets/Images/Products/Art&Illustrations/Digital Art 3.jpg" width="400" height="300" alt="">
+
+    <img src="Assets/Images/Products/Art&Illustrations/Digital Art 4.jpg" width="400" height="400" alt="">
+
+    <img src="Assets/Images/Products/Art&Illustrations/Digital Art 5.jpg" width="300" height="400" alt="">
+
+    <img src="Assets/Images/Products/Art&Illustrations/Digital Art 6.jpg" width="400" height="400" alt="">
+
+    </marquee>
+    </div>
+
+    <!--Creating some space between subjects-->
+    <ul></ul>
 
         
+    <!--Staring to create the Journal Products-->
+
+    <div class="container-fluid">
+      <div class="midContainer">
+        <div class="midNav">
+          <ul>
+            <li><a href=""><h4>Creative Journals</h4></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <ul></ul>
 
 
 
-      <!--Using Javascript for this page to make the products more presentable-->
 
-      <!--JavaScript-->
-      <script src="Assets/Styles/Products.js"></script>
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 1.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Modern Greek Statue</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 2.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Head Up in the Mountains</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 3.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Blazing Star</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 4.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Forth slide label</h5>
+            <p>Modern Metalic Greek Statue</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 5.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Fifth slide label</h5>
+            <p>Marbel and Gold Statue.</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 6.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Sixth slide label</h5>
+            <p>Star Forest</p>
+          </div>
+        </div>
+
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+    <!--Done inputting the Jounal products used the same method as before-->
+
+
+    <!--Creating some space between subjects-->
+    <ul></ul>
+
+
+
+<!--Using JavaScript,CSS and HTML to show the pricing of the Products-->
+
+    <table id="priceTable">
+      <tr>
+          <th>Id</th>
+          <th>Product Name</th>
+          <th>Product Price</th>
+      </tr>
+      <tr> 
+          <td>1</td>
+          <td>Art & Illustrations</td>
+          <td>15</td>
+      </tr>
+      <tr>
+          <td>2</td>
+          <td>Posters</td>
+          <td>25</td>
+      </tr>
+      <tr> 
+          <td>3</td>
+          <td>Journals</td>
+          <td>28</td>
+      </tr>
+      <tr>
+          <td>4</td>
+          <td>Metal Phone Cases</td>
+          <td>18</td>
+      </tr>
+      <tr>
+          <td>5</td>
+          <td>Plastic Phone Cases</td>
+          <td>10</td>
+      </tr>
+  </table>
+ 
+ <style>
+    #priceTable {
+       font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+       border-collapse: collapse;
+       width: 100%;
+    }
+
+        #priceTable td, #priceTable th {
+            border: 1px solid #000000;
+            padding: 8px;
+        }
+
+        #priceTable tr {
+            background-color: #ffffff;
+        }
+
+        #priceTable th {
+            padding-top: 12px;
+            padding-bottom: 12px;
+            text-align: left;
+            background-color: #ff0000;
+            color: #000000;
+        }
+</style>
+<script src="Assets/Styles/Products.js"></script>
+
+<!--Finished inputting the prices of the Products-->
+
+<!--Inputting some space between subjects-->
+<ul></ul>
+
+
+
+<!--Inputting the Footer-->
+
+<footer>
+  <div class="container-fluid">
+    <div class="footerContainer">
+
+      <div class="socialIcons">
+        <a href=""><i class="fa-brands fa-facebook"></i></a>
+        <a href=""><i class="fa-brands fa-instagram"></i></a>
+        <a href=""><i class="fa-brands fa-youtube"></i></a>
+        <a href=""><i class="fa-brands fa-google-plus"></i></a>
+      </div>
+      </div>
+    <div class="footerBottom">
+        <p>Copyright &copy;2024; Designed and Developed by <span class="designer">Shania Frendo</span></p>
+      </div>
+  </div>
+</footer>
+
+<!--Done Inputting the Footer-->
+
 
       <!--Bootstrap Script Link-->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
