--- a/Products.html
+++ b/Products.html
@@ -78,7 +78,7 @@
 
 
 
-
+      <div class="container-fluid">
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -149,6 +149,7 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
+    </div>
 
       <!--Finished doing the Art & Illustrations Carousel-->
 
@@ -186,7 +187,7 @@
       <div class="midContainer">
         <div class="midNav">
           <ul>
-            <li><a href=""><h4>Creative Journals</h4></a></li>
+            <li><a href=""><h4></h4></a></li>
           </ul>
         </div>
       </div>
@@ -194,78 +195,26 @@
     <ul></ul>
 
 
+    <div class="row">
+      <div style="text-align: center;"><h2>Creative Journals</h2></div>
+  <marquee behavior="scroll" direction="left" scrollamount="5">
 
+  <img src="Assets/Images/Products/Journals/Journal 1.jpg" width="300" height="400" alt="">
 
-    <div id="carouselExampleCaptions" class="carousel slide">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
-      </div>
+  <img src="Assets/Images/Products/Journals/Journal 2.jpg" width="300" height="400" alt="">
 
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 1.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Modern Greek Statue</p>
-          </div>
-        </div>
+  <img src="Assets/Images/Products/Journals/Journal 3.jpg" width="300" height="400" alt="">
 
-        <div class="carousel-item">
-          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 2.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Head Up in the Mountains</p>
-          </div>
-        </div>
+  <img src="Assets/Images/Products/Journals/Journal 4.jpg" width="300" height="400" alt="">
 
-        <div class="carousel-item">
-          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 3.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Blazing Star</p>
-          </div>
-        </div>
+  <img src="Assets/Images/Products/Journals/Journal 5.jpg" width="300" height="400" alt="">
 
-        <div class="carousel-item">
-          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 4.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Forth slide label</h5>
-            <p>Modern Metalic Greek Statue</p>
-          </div>
-        </div>
+  <img src="Assets/Images/Products/Journals/Journal 6.jpg" width="300" height="400" alt="">
 
-        <div class="carousel-item">
-          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 5.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Fifth slide label</h5>
-            <p>Marbel and Gold Statue.</p>
-          </div>
-        </div>
+  </marquee>
+  </div>
 
-        <div class="carousel-item">
-          <img src="Assets/Images/Products/Art&Illustrations/Digital Art 6.jpg" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>Sixth slide label</h5>
-            <p>Star Forest</p>
-          </div>
-        </div>
-
-      </div>
-
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
+    
 
     <!--Done inputting the Jounal products used the same method as before-->
 
