Products Page Done
Managed to create this page as I wanted it and managed to create something from JavaScript that made my idea better. Learned new things along the way and looking forward to learn more.

--- a/Products.html
+++ b/Products.html
@@ -65,18 +65,6 @@
 
       <!--Starting with the Art & Illustrations-->
 
-      <div class="container-fluid">
-        <div class="midContainer">
-          <div class="midNav">
-            <ul>
-              <li><a href=""><h4>Art & Illustrations</h4></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <ul></ul>
-
-
 
       <div class="container-fluid">
       <div id="carouselExampleCaptions" class="carousel slide">
@@ -159,7 +147,7 @@
       <!--I am going to start to do the Posters but instaed of doing them in a carousel I am going to do atomatically move by itself from one side to another-->
 
       <div class="row">
-        <div style="text-align: center;"><h2>Posters</h2></div>
+        <div style="text-align: center;"><ul><h2>Posters</h2></ul></div>
     <marquee behavior="scroll" direction="left" scrollamount="5">
 
     <img src="Assets/Images/Products/Art&Illustrations/Digital Art 1.jpg" width="400" height="350" alt="">
@@ -183,21 +171,9 @@
         
     <!--Staring to create the Journal Products-->
 
-    <div class="container-fluid">
-      <div class="midContainer">
-        <div class="midNav">
-          <ul>
-            <li><a href=""><h4></h4></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <ul></ul>
-
-
     <div class="row">
-      <div style="text-align: center;"><h2>Creative Journals</h2></div>
-  <marquee behavior="scroll" direction="left" scrollamount="5">
+      <div style="text-align: center;"><ul><h2>Creative Journals</h2></ul></div>
+  <marquee behavior="scroll" direction="right" scrollamount="5">
 
   <img src="Assets/Images/Products/Journals/Journal 1.jpg" width="300" height="400" alt="">
 
@@ -214,14 +190,58 @@
   </marquee>
   </div>
 
-    
-
     <!--Done inputting the Jounal products used the same method as before-->
 
 
+  <!--Creating some space between subjects-->
+  <ul></ul>
+
+
+    <!--Starting to input teh phone covers my plan is that I have two layers instaed of one, one going to the right and the other going to the left-->
+
+
+    <div class="row">
+      <div style="text-align: center;"><ul><h2>Phone Cases</h2></ul></div>
+  <marquee behavior="scroll" direction="left" scrollamount="5">
+
+  <img src="Assets/Images/Products/PhoneCases/MetalPhoneCase1.jpg" width="300" height="600" alt="">
+
+  <img src="Assets/Images/Products/PhoneCases/MetalPhoneCase2.jpg" width="300" height="600" alt="">
+
+  <img src="Assets/Images/Products/PhoneCases/MetalPhoneCase3.jpg" width="300" height="600" alt="">
+
+  <img src="Assets/Images/Products/PhoneCases/MetalPhoneCase4.jpg" width="300" height="600" alt="">
+
+  <img src="Assets/Images/Products/PhoneCases/MetalPhoneCase5.jpg" width="300" height="600" alt="">
+
+  <img src="Assets/Images/Products/PhoneCases/MetalPhoneCase6.jpg" width="300" height="600" alt="">
+
+  </marquee>
+  </div>
+
+  <div class="row">
+    <div style="text-align: center;"><h2></h2></div>
+<marquee behavior="scroll" direction="right" scrollamount="5">
+
+<img src="Assets/Images/Products/PhoneCases/PlasticPhoneCase1.jpg" width="300" height="600" alt="">
+
+<img src="Assets/Images/Products/PhoneCases/PlasticPhoneCase2.jpg" width="300" height="600" alt="">
+
+<img src="Assets/Images/Products/PhoneCases/PlasticPhoneCase3.jpg" width="300" height="600" alt="">
+
+<img src="Assets/Images/Products/PhoneCases/PlasticPhoneCase4.jpg" width="300" height="600" alt="">
+
+<img src="Assets/Images/Products/PhoneCases/PlasticPhoneCase5.jpg" width="300" height="600" alt="">
+
+<img src="Assets/Images/Products/PhoneCases/PlasticPhoneCase6.jpg" width="300" height="600" alt="">
+
+</marquee>
+</div>
+
+<!--Finished creating the Phne case rows the out come is I wanted it-->
+
     <!--Creating some space between subjects-->
     <ul></ul>
-
 
 
 <!--Using JavaScript,CSS and HTML to show the pricing of the Products-->
